Bilierのテンプレート制作完了

--- a/asentus/HTML/pricing.html
+++ b/asentus/HTML/pricing.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <!-- ==============================
-    Project:        Metronic "Asentus" Frontend Freebie - Responsive HTML Template Based On Twitter Bootstrap 3.3.4
-    Version:        1.0
-    Author:         KeenThemes
-    Primary use:    Corporate, Business Themes.
-    Email:          support@keenthemes.com
-    Follow:         http://www.twitter.com/keenthemes
-    Like:           http://www.facebook.com/keenthemes
-    Website:        http://www.keenthemes.com
-    Premium:        Premium Metronic Admin Theme: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
+    プロジェクト:       Bilier テーマ - レスポンシブ HTML テンプレート Based On Twitter Bootstrap 3.3.4
+    バージョン:         1.0
+    制作者:             SmartGenz Group
+    利用用途:           不動産サイト、コーポレートサイト
+    ページ:             料金例
+    メールアドレス:      arenpadorina@smartgenz.com
+    インスタグラム:      https://www.instagram.com/smartgenz_group/
+    フェースブック:      https://www.facebook.com/profile.php?id=100085283557633
+    ウェブサイト:        https://smartgenz.com/
 ================================== -->
-<html lang="en" class="no-js">
+<html lang="ja" class="no-js">
     <!-- BEGIN HEAD -->
     <head>
         <meta charset="utf-8"/>
-        <title>Metronic "Asentus" Frontend Freebie</title>
+        <title>Bilierテンプレートサイト | 料金例</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
@@ -66,12 +66,12 @@
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
                             <ul class="navbar-nav navbar-nav-right">
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="index.html">Home</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="pricing.html">Pricing</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="about.html">About</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="products.html">Products</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="index.html">ホーム</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="pricing.html">料金例</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="about.html">事業概要</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="products.html">デザイン事例</a></li>
                                 <li class="nav-item"><a class="nav-item-child nav-item-hover" href="faq.html">FAQ</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="contact.html">Contact</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="contact.html">お問い合わせ</a></li>
                             </ul>
                         </div>
                     </div>
@@ -85,8 +85,8 @@
         <!--========== PARALLAX ==========-->
         <div class="parallax-window" data-parallax="scroll" data-image-src="img/1920x1080/01.jpg">
             <div class="parallax-content container">
-                <h1 class="carousel-title">Product Pricing</h1>
-                <p>Lorem ipsum dolor amet consectetur adipiscing dolore magna aliqua <br/> enim minim estudiat veniam siad venumus dolore</p>
+                <h1 class="carousel-title">サービス価格例</h1>
+                <p>時代の変化に合わせたリフォームを徹底サポート。<br class="br-pc">全国拠点のご移転やリニューアルもサポート。オフィスに関わる全てをワンストップ対応。</p>
             </div>
         </div>
         <!--========== PARALLAX ==========-->
@@ -97,61 +97,65 @@
             <div class="content-lg container">
                 <div class="row row-space-1">
                     <div class="col-sm-4 sm-margin-b-2">
-                        <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
-                            <!-- Pricing -->
-                            <div class="pricing">
-                                <div class="margin-b-30">
-                                    <i class="pricing-icon icon-chemistry"></i>
-                                    <h3>Starter Kit <span> - $</span> 49</h3>
-                                    <p>Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
-                                </div>
-                                <ul class="list-unstyled pricing-list margin-b-50">
-                                    <li class="pricing-list-item">Basic Features</li>
-                                    <li class="pricing-list-item">Up to 5 products</li>
-                                    <li class="pricing-list-item">50 Users Panels</li>
-                                </ul>
-                                <a href="pricing.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
+                        <!-- Pricing -->
+                        <div class="pricing">
+                            <div class="margin-b-30">
+                                <i class="pricing-icon icon-chemistry"></i>
+                                <h3>オフィスリノベーション <span> - <br>￥</span> 5000万～8000万</h3>
+                                <p>オフィスの物件仲介から、レイアウト設計、家具・OA機器選定、原状回復まで一貫してお手伝い。</p>
                             </div>
-                            <!-- End Pricing -->
+                            <ul class="list-unstyled pricing-list margin-b-50">
+                                <li class="pricing-list-item">現状調査・マネージメント</li>
+                                <li class="pricing-list-item">レイアウト設計</li>
+                                <li class="pricing-list-item">内装工事</li>
+                                <li class="pricing-list-item">情報機器工事</li>
+                                <li class="pricing-list-item">原状回復工事</li>
+                            </ul>
+                            <a href="pricing.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">詳しくはこちら</a>
                         </div>
+                        <!-- End Pricing -->
                     </div>
                     <div class="col-sm-4 sm-margin-b-2">
-                        <div class="wow fadeInUp" data-wow-duration=".3" data-wow-delay=".2s">
-                            <!-- Pricing -->
-                            <div class="pricing pricing-active">
-                                <div class="margin-b-30">
-                                    <i class="pricing-icon icon-badge"></i>
-                                    <h3>Professional <span> - $</span> 149</h3>
-                                    <p>Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
-                                </div>
-                                <ul class="list-unstyled pricing-list margin-b-50">
-                                    <li class="pricing-list-item">Basic Features</li>
-                                    <li class="pricing-list-item">Up to 100 products</li>
-                                    <li class="pricing-list-item">100 Users Panels</li>
-                                </ul>
-                                <a href="pricing.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
+                        <!-- Pricing -->
+                        <div class="pricing pricing-active">
+                            <div class="margin-b-30">
+                                <i class="pricing-icon icon-badge"></i>
+                                <h3>医院リフォーム <span> - <br>￥</span> 5000万～8000万</h3>
+                                <p>診療圏調査から、開業テナント物件のご紹介、建物の設計、施工、開業サポートまで全面的に対応。</p>
                             </div>
-                            <!-- End Pricing -->
+                            <ul class="list-unstyled pricing-list margin-b-50">
+                                <li class="pricing-list-item">現状調査・マネージメント</li>
+                                <li class="pricing-list-item">レイアウト設計</li>
+                                <li class="pricing-list-item">内装工事</li>
+                                <li class="pricing-list-item">情報機器工事</li>
+                                <li class="pricing-list-item">原状回復工事</li>
+                                <li class="pricing-list-item">不動産物件仲介</li>
+                                <li class="pricing-list-item">電気整備工事</li>
+                            </ul>
+                            <a href="pricing.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">詳しくはこちら</a>
                         </div>
+                        <!-- End Pricing -->
                     </div>
                     <div class="col-sm-4">
-                        <div class="wow fadeInRight" data-wow-duration=".3" data-wow-delay=".1s">
-                            <!-- Pricing -->
-                            <div class="pricing">
-                                <div class="margin-b-30">
-                                    <i class="pricing-icon icon-shield"></i>
-                                    <h3>Advanced <span> - $</span> 249</h3>
-                                    <p>Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
-                                </div>
-                                <ul class="list-unstyled pricing-list margin-b-50">
-                                    <li class="pricing-list-item">Extended Features</li>
-                                    <li class="pricing-list-item">Unlimited products</li>
-                                    <li class="pricing-list-item">Unlimited Users Panels</li>
-                                </ul>
-                                <a href="pricing.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
+                        <!-- Pricing -->
+                        <div class="pricing">
+                            <div class="margin-b-30">
+                                <i class="pricing-icon icon-shield"></i>
+                                <h3>ビルリフォーム <span> - <br>￥</span> 1億～10億</h3>
+                                <p>設計からオペレーションまでフルサポート致します。ビルの設計・内装工事・レイアウト設計致します</p>
                             </div>
-                            <!-- End Pricing -->
+                            <ul class="list-unstyled pricing-list margin-b-50">
+                                <li class="pricing-list-item">現状調査・マネージメント</li>
+                                <li class="pricing-list-item">レイアウト設計</li>
+                                <li class="pricing-list-item">内装工事</li>
+                                <li class="pricing-list-item">情報機器工事</li>
+                                <li class="pricing-list-item">原状回復工事</li>
+                                <li class="pricing-list-item">不動産物件仲介</li>
+                                <li class="pricing-list-item">電気整備工事</li>
+                            </ul>
+                            <a href="pricing.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">詳しくはこちら</a>
                         </div>
+                        <!-- End Pricing -->
                     </div>
                 </div>
                 <!--// end row -->
@@ -163,7 +167,7 @@
         <div class="content-lg container">
             <div class="row">
                 <div class="col-sm-9">
-                    <h2>Why Customers Are Choosing Asentus?</h2>
+                    <h2>私たちが選ばれている理由</h2>
 
                     <!-- Swiper Testimonials -->
                     <div class="swiper-slider swiper-testimonials">
@@ -172,23 +176,19 @@
                             <div class="swiper-slide">
                                 <blockquote class="blockquote">
                                     <div class="margin-b-20">
-                                        Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua. Ut enim minim veniam exercitation laboris ut siad consequat siad minim enum esqudiat dolore.
+                                        皆さん、とても丁寧に説明してくれました。電話やzoomミーティングでの確認もありがたかったです。<br class="br-pc">
+                                        本当にありがとうございました。次回作の時も、絶対に御社にお願いします。
                                     </div>
-                                    <div class="margin-b-20">
-                                        Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret tempor incididunt dolore magna consequat siad minim aliqua.
-                                    </div>
-                                    <p><span class="fweight-700 color-link">Joh Milner</span>, Metronic Customer</p>
+                                    <p><span class="fweight-700 color-link">ジョー　ミルナー</span>, 日本マイクロソフト㈱ </p>
                                 </blockquote>
                             </div>
                             <div class="swiper-slide">
                                 <blockquote class="blockquote">
                                     <div class="margin-b-20">
-                                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                        グランアセットマネジメントでは、当初（2017年のような時期）に話を聞いた他の不動産会社よりも、対話のスタイルが便利で快適だと感じました。<br class="br-pc">
+                                        ひろさんも、ひろさんも、かなり率直で、物件について質問すれば、正直にフィードバックしてくれます。福岡の不動産市場に関する専門知識を信頼していますし、一緒に仕事をするのが楽しいです。
                                     </div>
-                                    <div class="margin-b-20">
-                                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                    </div>
-                                    <p><span class="fweight-700 color-link">Alex Clarson</span>, Metronic Customer</p>
+                                    <p><span class="fweight-700 color-link">アレックス クラークソン</span>, 丸紅株式会社</p>
                                 </blockquote>
                             </div>
                         </div>
@@ -247,14 +247,14 @@
                         <div class="col-sm-2 sm-margin-b-50">
                             <!-- List -->
                             <ul class="list-unstyled footer-list">
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Home</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">About</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Products</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Pricing</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Clients</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Careers</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Contact</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Terms</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">ホーム</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">事業概要</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">商品概要</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">料金表</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">お客様</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">キャリア</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">コンタクト</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">条件</a></li>
                             </ul>
                             <!-- End List -->
                         </div>
@@ -264,17 +264,17 @@
                                 <li class="footer-list-item"><a class="footer-list-link" href="#">Twitter</a></li>
                                 <li class="footer-list-item"><a class="footer-list-link" href="#">Facebook</a></li>
                                 <li class="footer-list-item"><a class="footer-list-link" href="#">Instagram</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">YouTube</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">Youtube</a></li>
                             </ul>
                             <!-- End List -->
                         </div>
                         <div class="col-sm-5 sm-margin-b-30">
-                            <h2 class="color-white">Send Us A Note</h2>
-                            <input type="text" class="form-control footer-input margin-b-20" placeholder="Name" required>
-                            <input type="email" class="form-control footer-input margin-b-20" placeholder="Email" required>
-                            <input type="text" class="form-control footer-input margin-b-20" placeholder="Phone" required>
-                            <textarea class="form-control footer-input margin-b-30" rows="6" placeholder="Message" required></textarea>
-                            <button type="submit" class="btn-theme btn-theme-sm btn-base-bg text-uppercase">Submit</button>
+                            <h2 class="color-white">お問い合わせ（例）</h2>
+                            <input type="text" class="form-control footer-input margin-b-20" placeholder="お名前" required>
+                            <input type="email" class="form-control footer-input margin-b-20" placeholder="メールアドレス" required>
+                            <input type="text" class="form-control footer-input margin-b-20" placeholder="お電話番号" required>
+                            <textarea class="form-control footer-input margin-b-30" rows="6" placeholder="お問い合わせ内容" required></textarea>
+                            <button type="submit" class="btn-theme btn-theme-sm btn-base-bg text-uppercase">送信</button>
                         </div>
                     </div>
                     <!--// end row -->
@@ -289,12 +289,12 @@
                         <img class="footer-logo" src="img/logo.png" alt="Asentus Logo">
                     </div>
                     <div class="col-xs-6 text-right">
-                        <p class="margin-b-0"><a class="color-base fweight-700" href="http://keenthemes.com/preview/asentus/">Asentus</a> Theme Powered by: <a class="color-base fweight-700" href="http://www.keenthemes.com/">KeenThemes.com</a></p>
+                        <p class="margin-b-0"><a class="color-base fweight-700" href="#">Bilier</a> Theme Powered by: <a class="color-base fweight-700" href="https://smartgenz.com/">smartgenz.com</a></p>
                     </div>
                 </div>
                 <!--// end row -->
             </div>
-            <!-- End Copyright -->
+            <!-- End Copyright -->  
         </footer>
         <!--========== END FOOTER ==========-->
 
