--- a/asentus/HTML/products.html
+++ b/asentus/HTML/products.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <!-- ==============================
-    Project:        Metronic "Asentus" Frontend Freebie - Responsive HTML Template Based On Twitter Bootstrap 3.3.4
-    Version:        1.0
-    Author:         KeenThemes
-    Primary use:    Corporate, Business Themes.
-    Email:          support@keenthemes.com
-    Follow:         http://www.twitter.com/keenthemes
-    Like:           http://www.facebook.com/keenthemes
-    Website:        http://www.keenthemes.com
-    Premium:        Premium Metronic Admin Theme: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
+    プロジェクト:       Bilier テーマ - レスポンシブ HTML テンプレート Based On Twitter Bootstrap 3.3.4
+    バージョン:         1.0
+    制作者:             SmartGenz Group
+    利用用途:           不動産サイト、コーポレートサイト
+    ページ:             商品について
+    メールアドレス:      arenpadorina@smartgenz.com
+    インスタグラム:      https://www.instagram.com/smartgenz_group/
+    フェースブック:      https://www.facebook.com/profile.php?id=100085283557633
+    ウェブサイト:        https://smartgenz.com/
 ================================== -->
-<html lang="en" class="no-js">
+<html lang="ja" class="no-js">
     <!-- BEGIN HEAD -->
     <head>
         <meta charset="utf-8"/>
-        <title>Metronic "Asentus" Frontend Freebie</title>
+        <title>Bilierテンプレートサイト | 商品について</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
@@ -66,12 +66,12 @@
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
                             <ul class="navbar-nav navbar-nav-right">
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="index.html">Home</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="pricing.html">Pricing</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="about.html">About</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="products.html">Products</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="index.html">ホーム</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="pricing.html">料金例</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="about.html">事業概要</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="products.html">デザイン事例</a></li>
                                 <li class="nav-item"><a class="nav-item-child nav-item-hover" href="faq.html">FAQ</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="contact.html">Contact</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="contact.html">お問い合わせ</a></li>
                             </ul>
                         </div>
                     </div>
@@ -85,8 +85,8 @@
         <!--========== PARALLAX ==========-->
         <div class="parallax-window" data-parallax="scroll" data-image-src="img/1920x1080/01.jpg">
             <div class="parallax-content container">
-                <h1 class="carousel-title">Products</h1>
-                <p>Lorem ipsum dolor amet consectetur adipiscing dolore magna aliqua <br/> enim minim estudiat veniam siad venumus dolore</p>
+                <h1 class="carousel-title">デザイン事例</h1>
+                <p>私たちの設計・デザイン事例について、いくつかご紹介致します。何か疑問点等ありましたら気楽にお電話ください。</p>
             </div>
         </div>
         <!--========== PARALLAX ==========-->
@@ -96,8 +96,8 @@
         <div class="content-lg container">
             <div class="row margin-b-40">
                 <div class="col-sm-6">
-                    <h2>Our Exceptional Solutions</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua enim minim veniam exercitation</p>
+                    <h2>当社の優れたソリューション</h2>
+                    <p>何かソリューションについて、記入したいことがあればこちらへ入力いたします。何かソリューションについて、記入したいことがあればこちらへ入力いたします。何かソリューションについて、記入したいことがあればこちらへ入力いたします。</p>
                 </div>
             </div>
             <!--// end row -->
@@ -110,9 +110,9 @@
                             <img class="img-responsive" src="img/970x647/01.jpg" alt="Our Exceptional Solutions Image">
                         </div>
                     </div>
-                    <h3><a href="#">Triangle Roof</a> <span class="text-uppercase margin-l-20">Management</span></h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
-                    <a class="link" href="#">Read More</a>
+                    <h3><a href="#">トライアングル ルーフ</a> <span class="text-uppercase margin-l-20">マネジメント</span></h3>
+                    <p>建設会社を主にイメージしたビルデザイン。参考としたデザインはアメリカにある大手建設会社のビルであり、観光物として多くの観光客から訪問されている。</p>
+                    <a class="link" href="#">詳しくはこちら</a>
                 </div>
                 <!-- End Our Exceptional Solutions -->
 
@@ -123,9 +123,9 @@
                             <img class="img-responsive" src="img/970x647/02.jpg" alt="Our Exceptional Solutions Image">
                         </div>
                     </div>
-                    <h4><a href="#">Curved Corners</a> <span class="text-uppercase margin-l-20">Developmeny</span></h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
-                    <a class="link" href="#">Read More</a>
+                    <h4><a href="#">カーブ コーナーズ</a> <span class="text-uppercase margin-l-20">デベロップ</span></h4>
+                    <p>建設会社を主にイメージしたビルデザイン。参考としたデザインはアメリカにある大手建設会社のビルであり、観光物として多くの観光客から訪問されている。</p>
+                    <a class="link" href="#">詳しくはこちら</a>
                 </div>
                 <!-- End Our Exceptional Solutions -->
 
@@ -136,9 +136,9 @@
                             <img class="img-responsive" src="img/970x647/03.jpg" alt="Our Exceptional Solutions Image">
                         </div>
                     </div>
-                    <h4><a href="#">Bird On Green</a> <span class="text-uppercase margin-l-20">Design</span></h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
-                    <a class="link" href="#">Read More</a>
+                    <h4><a href="#">バードオングリーン</a> <span class="text-uppercase margin-l-20">デザイン</span></h4>
+                    <p>建設会社を主にイメージしたビルデザイン。参考としたデザインはアメリカにある大手建設会社のビルであり、観光物として多くの観光客から訪問されている。</p>
+                    <a class="link" href="#">詳しくはこちら</a>
                 </div>
                 <!-- End Our Exceptional Solutions -->
             </div>
@@ -152,9 +152,9 @@
                             <img class="img-responsive" src="img/970x647/01.jpg" alt="Our Exceptional Solutions Image">
                         </div>
                     </div>
-                    <h4><a href="#">Triangle Roof</a> <span class="text-uppercase margin-l-20">Management</span></h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
-                    <a class="link" href="#">Read More</a>
+                    <h4><a href="#">トライアングルルーフ</a> <span class="text-uppercase margin-l-20">マネジメント</span></h4>
+                    <p>建設会社を主にイメージしたビルデザイン。参考としたデザインはアメリカにある大手建設会社のビルであり、観光物として多くの観光客から訪問されている。</p>
+                    <a class="link" href="#">詳しくはこちら</a>
                 </div>
                 <!-- End Our Exceptional Solutions -->
 
@@ -165,9 +165,9 @@
                             <img class="img-responsive" src="img/970x647/02.jpg" alt="Our Exceptional Solutions Image">
                         </div>
                     </div>
-                    <h4><a href="#">Curved Corners</a> <span class="text-uppercase margin-l-20">Developmeny</span></h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
-                    <a class="link" href="#">Read More</a>
+                    <h4><a href="#">カーブコーナーズ</a> <span class="text-uppercase margin-l-20">デベロップ</span></h4>
+                    <p>建設会社を主にイメージしたビルデザイン。参考としたデザインはアメリカにある大手建設会社のビルであり、観光物として多くの観光客から訪問されている。</p>
+                    <a class="link" href="#">詳しくはこちら</a>
                 </div>
                 <!-- End Our Exceptional Solutions -->
 
@@ -178,9 +178,9 @@
                             <img class="img-responsive" src="img/970x647/03.jpg" alt="Our Exceptional Solutions Image">
                         </div>
                     </div>
-                    <h4><a href="#">Bird On Green</a> <span class="text-uppercase margin-l-20">Design</span></h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
-                    <a class="link" href="#">Read More</a>
+                    <h4><a href="#">バードオングリーン</a> <span class="text-uppercase margin-l-20">デザイン</span></h4>
+                    <p>建設会社を主にイメージしたビルデザイン。参考としたデザインはアメリカにある大手建設会社のビルであり、観光物として多くの観光客から訪問されている。</p>
+                    <a class="link" href="#">詳しくはこちら</a>
                 </div>
                 <!-- End Our Exceptional Solutions -->
             </div>
@@ -228,9 +228,9 @@
                     <div class="ver-center">
                         <div class="ver-center-aligned">
                             <div class="promo-section-col">
-                                <h2>Our Clients</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua enim minim veniam exercitation ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua enim minim veniam exercitation</p>
-                                <p>Ipsum dolor sit amet consectetur adipiscing elit sed tempor incididut ut sead laboret dolore magna aliqua enim minim veniam exercitation ipsum dolor sit amet consectetur adipiscing</p>
+                                <h2>我々について</h2>
+                                <p>Bilierは東京都内の知る人ぞ知るユニークな物件から超高級物件まで、クライアント様のご要望に合わせてご紹介します。日本人と米国人で構成されるチームが、外国人の方々にとって気の遠くなるような手続きもスムーズにご案内し、ストレスの無い体験をご提供します。</p>
+                                <p>Bilierは東京都内の知る人ぞ知るユニークな物件から超高級物件まで、クライアント様のご要望に合わせてご紹介します。日本人と米国人で構成されるチームが、外国人の方々にとって気の遠くなるような手続きもスムーズにご案内し、ストレスの無い体験をご提供します。</p>
                             </div>
                         </div>
                     </div>
@@ -252,14 +252,14 @@
                         <div class="col-sm-2 sm-margin-b-50">
                             <!-- List -->
                             <ul class="list-unstyled footer-list">
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Home</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">About</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Products</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Pricing</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Clients</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Careers</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Contact</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Terms</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">ホーム</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">事業概要</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">商品概要</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">料金表</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">お客様</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">キャリア</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">コンタクト</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">条件</a></li>
                             </ul>
                             <!-- End List -->
                         </div>
@@ -269,17 +269,17 @@
                                 <li class="footer-list-item"><a class="footer-list-link" href="#">Twitter</a></li>
                                 <li class="footer-list-item"><a class="footer-list-link" href="#">Facebook</a></li>
                                 <li class="footer-list-item"><a class="footer-list-link" href="#">Instagram</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">YouTube</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">Youtube</a></li>
                             </ul>
                             <!-- End List -->
                         </div>
                         <div class="col-sm-5 sm-margin-b-30">
-                            <h2 class="color-white">Send Us A Note</h2>
-                            <input type="text" class="form-control footer-input margin-b-20" placeholder="Name" required>
-                            <input type="email" class="form-control footer-input margin-b-20" placeholder="Email" required>
-                            <input type="text" class="form-control footer-input margin-b-20" placeholder="Phone" required>
-                            <textarea class="form-control footer-input margin-b-30" rows="6" placeholder="Message" required></textarea>
-                            <button type="submit" class="btn-theme btn-theme-sm btn-base-bg text-uppercase">Submit</button>
+                            <h2 class="color-white">お問い合わせ（例）</h2>
+                            <input type="text" class="form-control footer-input margin-b-20" placeholder="お名前" required>
+                            <input type="email" class="form-control footer-input margin-b-20" placeholder="メールアドレス" required>
+                            <input type="text" class="form-control footer-input margin-b-20" placeholder="お電話番号" required>
+                            <textarea class="form-control footer-input margin-b-30" rows="6" placeholder="お問い合わせ内容" required></textarea>
+                            <button type="submit" class="btn-theme btn-theme-sm btn-base-bg text-uppercase">送信</button>
                         </div>
                     </div>
                     <!--// end row -->
@@ -294,12 +294,12 @@
                         <img class="footer-logo" src="img/logo.png" alt="Asentus Logo">
                     </div>
                     <div class="col-xs-6 text-right">
-                        <p class="margin-b-0"><a class="color-base fweight-700" href="http://keenthemes.com/preview/asentus/">Asentus</a> Theme Powered by: <a class="color-base fweight-700" href="http://www.keenthemes.com/">KeenThemes.com</a></p>
+                        <p class="margin-b-0"><a class="color-base fweight-700" href="#">Bilier</a> Theme Powered by: <a class="color-base fweight-700" href="https://smartgenz.com/">smartgenz.com</a></p>
                     </div>
                 </div>
                 <!--// end row -->
             </div>
-            <!-- End Copyright -->
+            <!-- End Copyright -->  
         </footer>
         <!--========== END FOOTER ==========-->
 
