--- a/asentus/HTML/contact.html
+++ b/asentus/HTML/contact.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <!-- ==============================
-    Project:        Metronic "Asentus" Frontend Freebie - Responsive HTML Template Based On Twitter Bootstrap 3.3.4
-    Version:        1.0
-    Author:         KeenThemes
-    Primary use:    Corporate, Business Themes.
-    Email:          support@keenthemes.com
-    Follow:         http://www.twitter.com/keenthemes
-    Like:           http://www.facebook.com/keenthemes
-    Website:        http://www.keenthemes.com
-    Premium:        Premium Metronic Admin Theme: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
+    プロジェクト:       Bilier テーマ - レスポンシブ HTML テンプレート Based On Twitter Bootstrap 3.3.4
+    バージョン:         1.0
+    制作者:             SmartGenz Group
+    利用用途:           不動産サイト、コーポレートサイト
+    ページ:             お問い合わせページ
+    メールアドレス:      arenpadorina@smartgenz.com
+    インスタグラム:      https://www.instagram.com/smartgenz_group/
+    フェースブック:      https://www.facebook.com/profile.php?id=100085283557633
+    ウェブサイト:        https://smartgenz.com/
 ================================== -->
-<html lang="en" class="no-js">
+<html lang="ja" class="no-js">
     <!-- BEGIN HEAD -->
     <head>
         <meta charset="utf-8"/>
-        <title>Metronic "Asentus" Frontend Freebie</title>
+        <title>Bilierテンプレートサイト | お問い合わせページ</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
@@ -65,12 +65,12 @@
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
                             <ul class="navbar-nav navbar-nav-right">
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="index.html">Home</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="pricing.html">Pricing</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="about.html">About</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="products.html">Products</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="index.html">ホーム</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="pricing.html">料金例</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="about.html">事業概要</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="products.html">デザイン事例</a></li>
                                 <li class="nav-item"><a class="nav-item-child nav-item-hover" href="faq.html">FAQ</a></li>
-                                <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="contact.html">Contact</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="contact.html">お問い合わせ</a></li>
                             </ul>
                         </div>
                     </div>
@@ -84,8 +84,8 @@
         <!--========== PARALLAX ==========-->
         <div class="parallax-window" data-parallax="scroll" data-image-src="img/1920x1080/01.jpg">
             <div class="parallax-content container">
-                <h1 class="carousel-title">Contact</h1>
-                <p>Lorem ipsum dolor amet consectetur adipiscing dolore magna aliqua <br/> enim minim estudiat veniam siad venumus dolore</p>
+                <h1 class="carousel-title">お問い合わせ</h1>
+                <p>オフィスの移転・リニューアル・その他サポートはオフィス空間までお気軽にご連絡ください。</p>
             </div>
         </div>
         <!--========== PARALLAX ==========-->
@@ -98,11 +98,11 @@
                     <!-- Contact List -->
                     <div class="col-sm-4 sm-margin-b-50">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
-                            <h3><a href="#">New York</a> <span class="text-uppercase margin-l-20">Head Office</span></h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                            <h3><a href="#">東京</a> <span class="text-uppercase margin-l-20">本社</span></h3>
+                            <p>何か事務所に関して記入するものがあればこちらへ記入します。何か事務所に関して記入するものがあればこちらへ記入します。</p>
                             <ul class="list-unstyled contact-list">
-                                <li><i class="margin-r-10 color-base icon-call-out"></i> 1 012 3456 7890</li>
-                                <li><i class="margin-r-10 color-base icon-envelope"></i> hq@acidus.com</li>
+                                <li><i class="margin-r-10 color-base icon-call-out"></i> 03-090-0900 </li>
+                                <li><i class="margin-r-10 color-base icon-envelope"></i> hqtokyo@bilier.com</li>
                             </ul>
                         </div>
                     </div>
@@ -111,11 +111,11 @@
                     <!-- Contact List -->
                     <div class="col-sm-4 sm-margin-b-50">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
-                            <h3><a href="#">London</a> <span class="text-uppercase margin-l-20">Operation</span></h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                            <h3><a href="#">ニューヨーク</a> <span class="text-uppercase margin-l-20">オペレーション</span></h3>
+                            <p>何か事務所に関して記入するものがあればこちらへ記入します。何か事務所に関して記入するものがあればこちらへ記入します。</p>
                             <ul class="list-unstyled contact-list">
-                                <li><i class="margin-r-10 color-base icon-call-out"></i> 44 77 3456 7890</li>
-                                <li><i class="margin-r-10 color-base icon-envelope"></i> operation@acidus.com</li>
+                                <li><i class="margin-r-10 color-base icon-call-out"></i> 03-090-0901 </li>
+                                <li><i class="margin-r-10 color-base icon-envelope"></i> hqna@bilier.com</li>
                             </ul>
                         </div>
                     </div>
@@ -124,11 +124,11 @@
                     <!-- Contact List -->
                     <div class="col-sm-4 sm-margin-b-50">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
-                            <h3><a href="#">Singapore</a> <span class="text-uppercase margin-l-20">Finance</span></h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                            <h3><a href="#">シンガポール</a> <span class="text-uppercase margin-l-20">ファイナンス</span></h3>
+                            <p>何か事務所に関して記入するものがあればこちらへ記入します。何か事務所に関して記入するものがあればこちらへ記入します。</p>
                             <ul class="list-unstyled contact-list">
-                                <li><i class="margin-r-10 color-base icon-call-out"></i> 50 012 456 7890</li>
-                                <li><i class="margin-r-10 color-base icon-envelope"></i> finance@acidus.com</li>
+                                <li><i class="margin-r-10 color-base icon-call-out"></i> 03-090-0902</li>
+                                <li><i class="margin-r-10 color-base icon-envelope"></i> hqfinance@bilier.com</li>
                             </ul>
                         </div>
                     </div>
@@ -140,7 +140,8 @@
         <!-- End Contact List -->
 
         <!-- Google Map -->
-        <div id="map" class="map height-400"></div>
+        <!-- <div id="map" class="map height-400"></div> -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.3377312975654!2d139.8093943!3d35.66868519999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188900d98dc2bf%3A0xb8f8b907f927954f!2z44CSMTM1LTAwMTYg5p2x5Lqs6YO95rGf5p2x5Yy65p2x6Zm977yT5LiB55uu77yR!5e0!3m2!1sja!2sjp!4v1673700581948!5m2!1sja!2sjp" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
         <!-- Promo Section -->
         <div class="promo-section overflow-h">
@@ -149,9 +150,8 @@
                     <div class="ver-center">
                         <div class="ver-center-aligned">
                             <div class="promo-section-col">
-                                <h2>Our Clients</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua enim minim veniam exercitation ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua enim minim veniam exercitation</p>
-                                <p>Ipsum dolor sit amet consectetur adipiscing elit sed tempor incididut ut sead laboret dolore magna aliqua enim minim veniam exercitation ipsum dolor sit amet consectetur adipiscing</p>
+                                <h2>我々について</h2>
+                                <p>Bilierは東京都内の知る人ぞ知るユニークな物件から超高級物件まで、クライアント様のご要望に合わせてご紹介します。日本人と米国人で構成されるチームが、外国人の方々にとって気の遠くなるような手続きもスムーズにご案内し、ストレスの無い体験をご提供します。</p>
                             </div>
                         </div>
                     </div>
@@ -173,14 +173,14 @@
                         <div class="col-sm-2 sm-margin-b-50">
                             <!-- List -->
                             <ul class="list-unstyled footer-list">
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Home</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">About</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Products</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Pricing</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Clients</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Careers</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Contact</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">Terms</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">ホーム</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">事業概要</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">商品概要</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">料金表</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">お客様</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">キャリア</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">コンタクト</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">条件</a></li>
                             </ul>
                             <!-- End List -->
                         </div>
@@ -190,17 +190,17 @@
                                 <li class="footer-list-item"><a class="footer-list-link" href="#">Twitter</a></li>
                                 <li class="footer-list-item"><a class="footer-list-link" href="#">Facebook</a></li>
                                 <li class="footer-list-item"><a class="footer-list-link" href="#">Instagram</a></li>
-                                <li class="footer-list-item"><a class="footer-list-link" href="#">YouTube</a></li>
+                                <li class="footer-list-item"><a class="footer-list-link" href="#">Youtube</a></li>
                             </ul>
                             <!-- End List -->
                         </div>
                         <div class="col-sm-5 sm-margin-b-30">
-                            <h2 class="color-white">Send Us A Note</h2>
-                            <input type="text" class="form-control footer-input margin-b-20" placeholder="Name" required>
-                            <input type="email" class="form-control footer-input margin-b-20" placeholder="Email" required>
-                            <input type="text" class="form-control footer-input margin-b-20" placeholder="Phone" required>
-                            <textarea class="form-control footer-input margin-b-30" rows="6" placeholder="Message" required></textarea>
-                            <button type="submit" class="btn-theme btn-theme-sm btn-base-bg text-uppercase">Submit</button>
+                            <h2 class="color-white">お問い合わせ（例）</h2>
+                            <input type="text" class="form-control footer-input margin-b-20" placeholder="お名前" required>
+                            <input type="email" class="form-control footer-input margin-b-20" placeholder="メールアドレス" required>
+                            <input type="text" class="form-control footer-input margin-b-20" placeholder="お電話番号" required>
+                            <textarea class="form-control footer-input margin-b-30" rows="6" placeholder="お問い合わせ内容" required></textarea>
+                            <button type="submit" class="btn-theme btn-theme-sm btn-base-bg text-uppercase">送信</button>
                         </div>
                     </div>
                     <!--// end row -->
@@ -215,12 +215,12 @@
                         <img class="footer-logo" src="img/logo.png" alt="Asentus Logo">
                     </div>
                     <div class="col-xs-6 text-right">
-                        <p class="margin-b-0"><a class="color-base fweight-700" href="http://keenthemes.com/preview/asentus/">Asentus</a> Theme Powered by: <a class="color-base fweight-700" href="http://www.keenthemes.com/">KeenThemes.com</a></p>
+                        <p class="margin-b-0"><a class="color-base fweight-700" href="#">Bilier</a> Theme Powered by: <a class="color-base fweight-700" href="https://smartgenz.com/">smartgenz.com</a></p>
                     </div>
                 </div>
                 <!--// end row -->
             </div>
-            <!-- End Copyright -->
+            <!-- End Copyright -->  
         </footer>
         <!--========== END FOOTER ==========-->
 
