--- a/nix/nix/index.html
+++ b/nix/nix/index.html
@@ -59,7 +59,7 @@ https://templatemo.com/tm-565-onix-digital
             <nav class="main-nav">
               <!-- ***** Logo Start ***** -->
               <a href="index.html" class="logo">
-                <img src="./assets/images/nixii_アートボード 1.png" style="width: 200px;" />
+                <img src="./assets/images/nix-logo.png" style="width: 200px;" />
               </a>
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
